content and images changes

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <!-- Title -->
-    <title>Atorn - Law Firm & Attorney Website HTML Template</title>
+    <title>LawAssist - Law Firm</title>
   </head>
   <body>
     <!-- Preloder Area -->
@@ -51,13 +51,13 @@
                 <li>
                   <a href="mailto:hello@atorn.com">
                     <i class="las la-envelope"></i>
-                    hello@atorn.com
+                    info@lawassist.com
                   </a>
                 </li>
                 <li>
                   <a href="tel:+823-456-879">
                     <i class="las la-phone"></i>
-                    +0123 456 789
+                    +91 8766270884
                   </a>
                 </li>
               </ul>
@@ -141,7 +141,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link"> Ecosystem </a>
+                    <a href="ecosystem.html" class="nav-link"> Ecosystem </a>
                   </li>
 
                   <li class="nav-item">
@@ -213,72 +213,63 @@
     <!-- End Page banner Area -->
 
     <!-- Choose Area -->
-    <div class="choose-area about-page-area pt-100 pb-70">
-      <div class="container">
-        <div class="section-title text-center">
-          <h2>We Are Top Lawyers With <span> 25 Years</span> Of Experience</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
-          </p>
-        </div>
+    <div class="choose-area ptb-100">
+      <div class="container-fluid">
         <div class="row justify-content-center">
           <div class="col-lg-6">
-            <div class="choose-card">
-              <i class="las la-chart-pie"></i>
-              <h3>Long Experience</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt.
-              </p>
-            </div>
+            <div class="choose-text">
+              <div class="section-title">
+                <span>Why Choose LawAssist</span>
+                <h2>
+                  Your Trusted Legal Partner With <span>500+</span> Successful
+                  Registrations
+                </h2>
+                <p>
+                  At LawAssist, we combine legal expertise with business
+                  understanding to deliver solutions that actually work for
+                  startups and growing businesses. Our tech-enabled approach
+                  makes legal processes simpler, faster and more affordable.
+                </p>
+              </div>
 
-            <div class="choose-card">
-              <i class="las la-chart-bar"></i>
-              <h3>Our Success Cases</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt.
-              </p>
-            </div>
+              <div class="choose-card">
+                <i class="las la-clock"></i>
+                <h3>Fast Turnaround</h3>
+                <p>
+                  We value your time. Our streamlined processes ensure company
+                  registrations in 7-10 days and trademark filings within 24
+                  hours of document submission.
+                </p>
+              </div>
 
-            <div class="choose-card">
-              <i class="las la-user-tie"></i>
-              <h3>Professional Attorneys</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt.
-              </p>
+              <div class="choose-card">
+                <i class="las la-rupee-sign"></i>
+                <h3>Startup-Friendly Pricing</h3>
+                <p>
+                  Transparent, affordable packages with no hidden costs. Pay
+                  only for what you need with flexible payment options tailored
+                  for early-stage businesses.
+                </p>
+              </div>
+
+              <div class="choose-card">
+                <i class="las la-headset"></i>
+                <h3>Dedicated Support</h3>
+                <p>
+                  Get direct access to legal experts - not call centers. Our
+                  team provides personalized guidance through every step of your
+                  business journey.
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-lg-6">
-            <div class="choose-card">
-              <i class="lab la-accessible-icon"></i>
-              <h3>Legal Service</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt.
-              </p>
-            </div>
-
-            <div class="choose-card">
-              <i class="las la-balance-scale"></i>
-              <h3>Free Consulting</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt.
-              </p>
-            </div>
-
-            <div class="choose-card">
-              <i class="las la-user-astronaut"></i>
-              <h3>24/7 Support</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt.
-              </p>
+            <div class="choose-img">
+              <img
+                src="./assets/img/services/why-choose-us.jpg"
+                alt="LawAssist Legal Team"
+              />
             </div>
           </div>
         </div>
@@ -361,7 +352,7 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-5">
             <div class="about-image">
-              <img src="assets/img/about.png" alt="Image" />
+              <img src="assets/img/about.png" alt="LawAssist Team" />
             </div>
           </div>
 
@@ -370,34 +361,35 @@
               <div class="section-title">
                 <span>About Us</span>
                 <h2>
-                  We Are Top Lawyers With<span> 25 Years</span> Of Experience
+                  Your Trusted Legal Partner With <span>10+ Years</span> Of
+                  Expertise
                 </h2>
                 <p>
-                  But I must explain to you how all this mistaken idea of
-                  denouncing pleasure and praising pain was born and I will give
-                  you a complete account of the system, and expound the actual
-                  teachings of the great explorer of the truth, the
-                  master-builder.
+                  At LawAssist, we simplify legal complexities for businesses
+                  and startups. Our mission is to make legal services
+                  accessible, affordable, and efficient, helping you focus on
+                  growth while we handle compliance and protection.
                 </p>
               </div>
+
               <div class="row justify-content-center">
                 <div class="col-lg-6">
                   <ul>
                     <li>
                       <i class="las la-check-square"></i>
-                      100% Success Rate
+                      Startup-Focused Approach
                     </li>
                     <li>
                       <i class="las la-check-square"></i>
-                      No Need Extra Cost for Consultation
+                      Transparent Pricing
                     </li>
                     <li>
                       <i class="las la-check-square"></i>
-                      Expert Legal Service
+                      End-to-End Legal Support
                     </li>
                     <li>
                       <i class="las la-check-square"></i>
-                      Highly Recommendation
+                      Compliance Experts
                     </li>
                   </ul>
                 </div>
@@ -406,26 +398,27 @@
                   <ul>
                     <li>
                       <i class="las la-check-square"></i>
-                      Fast Support
+                      Fast Turnaround
                     </li>
                     <li>
                       <i class="las la-check-square"></i>
-                      High Court Performance
+                      Dedicated Legal Consultants
                     </li>
                     <li>
                       <i class="las la-check-square"></i>
-                      Free Counseling
+                      IP Protection Specialists
                     </li>
                     <li>
                       <i class="las la-check-square"></i>
-                      Quick Complete Case
+                      Business Growth Focused
                     </li>
                   </ul>
                 </div>
               </div>
+
               <div class="about-btn">
-                <a href="contact.html" class="default-btn-one me-3"
-                  >Free Consulting</a
+                <a href="contact.html" class="default-btn-one"
+                  >Get Free Consultation</a
                 >
               </div>
             </div>
@@ -444,11 +437,10 @@
               <div class="section-title">
                 <h2>Contact Us Today, Get In Touch With Expert</h2>
                 <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                  accusantium doloremque laudantium, totam rem aperiam, eaque
-                  ipsa quae ab illo inventore veritatis et quasi architecto
-                  beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
-                  quia voluptas sit aspernatur aut odit aut fugit.
+                  At LawAssist, we provide top-notch legal support for
+                  businesses, startups, and entrepreneurs. Whether you need help
+                  with registration, compliance, or legal protection, our team
+                  is here to assist you every step of the way.
                 </p>
               </div>
 
@@ -456,7 +448,7 @@
                 <div class="col-lg-6">
                   <div class="contact-card">
                     <span>Phone Number</span>
-                    <h3><a href="tel:+0123456987">+0123 456 987</a></h3>
+                    <h3><a href="tel:+918766270884">+91 8766270884</a></h3>
                   </div>
                 </div>
 
@@ -503,7 +495,7 @@
               <h2>Get A Flexible Schedule</h2>
             </div>
             <div class="contact-form">
-              <form id="contactForm">
+              <form action="https://your-web3-form-endpoint.com" method="POST">
                 <div class="row justify-content-center">
                   <div class="col-md-6">
                     <div class="form-group">
@@ -513,10 +505,8 @@
                         class="form-control"
                         id="name"
                         required
-                        data-error="Please enter your name"
                         placeholder="Full name"
                       />
-                      <div class="help-block with-errors"></div>
                       <i class="las la-user"></i>
                     </div>
                   </div>
@@ -529,10 +519,8 @@
                         class="form-control"
                         id="email"
                         required
-                        data-error="Please enter your email"
                         placeholder="Email address"
                       />
-                      <div class="help-block with-errors"></div>
                       <i class="las la-envelope"></i>
                     </div>
                   </div>
@@ -541,14 +529,12 @@
                     <div class="form-group">
                       <input
                         type="text"
-                        name="email"
+                        name="phone"
                         class="form-control"
-                        id="Phone"
+                        id="phone"
                         required
-                        data-error="Please enter your phone"
                         placeholder="Phone No"
                       />
-                      <div class="help-block with-errors"></div>
                       <i class="las la-phone"></i>
                     </div>
                   </div>
@@ -557,7 +543,7 @@
                     <div class="form-group">
                       <input
                         type="date"
-                        name="email"
+                        name="date"
                         class="form-control"
                         id="date"
                       />
@@ -574,10 +560,8 @@
                         cols="30"
                         rows="6"
                         required
-                        data-error="Please enter your message"
                         placeholder="Write your message..."
                       ></textarea>
-                      <div class="help-block with-errors"></div>
                       <i class="las la-sms"></i>
                     </div>
                   </div>
@@ -586,10 +570,13 @@
                     <button type="submit" class="default-btn-one">
                       Get An Appointment
                     </button>
-                    <div id="msgSubmit" class="h3 text-center hidden"></div>
-                    <div class="clearfix"></div>
                   </div>
                 </div>
+                <input
+                  type="hidden"
+                  name="token"
+                  value="af0b7193-e1ba-42f6-a435-db4fb28a9f4a"
+                />
               </form>
             </div>
           </div>
@@ -647,12 +634,13 @@
                 <img src="assets/img/logo-white.png" alt="logo" />
               </div>
               <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                blanditiis praesentium voluptatum deleniti atque corrupti quos
-                dolores et quas molestias excepturi sint occaecati cupiditate
-                non provident, similique sunt in culpa qui officia deserunt
-                mollitia animi, id est laborum et dolorum fuga. Et harum quidem
-                rerum.
+                At Law Assist, we are committed to delivering expert legal
+                solutions with integrity and precision. Our team takes pride in
+                offering personalized guidance to clients facing complex legal
+                challenges, ensuring transparency and professionalism every step
+                of the way. We believe in making justice accessible and strive
+                to ease the burden of legal procedures with clarity and
+                confidence.
               </p>
 
               <ul class="footer-socials">
@@ -704,22 +692,16 @@
                   </a>
                 </li>
                 <li>
-                  <a href="case-study.html">
+                  <a href="pricing.html">
                     <i class="las la-star"></i>
-                    Case Study
+                    Our Pricing
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="ecosystem.html">
                     <i class="las la-star"></i>
-                    Clients Review
-                  </a>
-                </li>
-                <li>
-                  <a href="attorney.html">
-                    <i class="las la-star"></i>
-                    Our Attorneys
+                    Our Ecosystem
                   </a>
                 </li>
               </ul>
@@ -732,45 +714,39 @@
 
               <ul class="footer-text">
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Civil Law
+                    Company Registration
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Family Law
+                    Trademark Registration
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Cyber Law
+                    MCA Compliance
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Education Law
+                    Legal Drafting
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Business Law
+                    Patent Filing
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Investment Law
-                  </a>
-                </li>
-                <li>
-                  <a href="service-details.html">
-                    <i class="las la-star"></i>
-                    Criminal Law
+                    MSME Registration
                   </a>
                 </li>
               </ul>
@@ -784,15 +760,15 @@
               <ul class="info-list">
                 <li>
                   <i class="las la-phone"></i>
-                  <a href="tel:+0123456987">+0123 456 987</a>
+                  <a href="tel:+918766270884">+91 8766270884</a>
                 </li>
                 <li>
                   <i class="las la-envelope"></i>
-                  <a href="mailto:atorn@info.com">atorn@info.com</a>
+                  <a href="mailto:info@lawassist.com">info@lawassist.com</a>
                 </li>
                 <li>
                   <i class="las la-map-marker-alt"></i>
-                  Silven House, 4 Lower Gilmor Bank Edinburgh EH3 9QP, UK
+                  Two Horizon, Gurugram, 122002
                 </li>
               </ul>
             </div>
@@ -806,11 +782,14 @@
     <div class="footer-bottom">
       <div class="container">
         <p>
-          © Atorn is Proudly Owned by
-          <a href="https://hibootstrap.com/" target="_blank">HiBootstrp</a>
+          © Copyright LawAssist. Designed by
+          <a href="https://aetherweb.life" target="_blank"
+            >Aetherweb Technologies LLP</a
+          >
         </p>
       </div>
     </div>
+
     <!-- End Footer bottom Area -->
 
     <!-- Go Top -->
