--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <!-- Title -->
-    <title>Atorn - Law Firm & Attorney Website HTML Template</title>
+    <title>LawAssist - Law Firm</title>
   </head>
   <body>
     <!-- Preloder Area -->
@@ -51,13 +51,13 @@
                 <li>
                   <a href="mailto:hello@atorn.com">
                     <i class="las la-envelope"></i>
-                    hello@atorn.com
+                    info@lawassist.com
                   </a>
                 </li>
                 <li>
                   <a href="tel:+823-456-879">
                     <i class="las la-phone"></i>
-                    +0123 456 789
+                    +91 8766270884
                   </a>
                 </li>
               </ul>
@@ -137,11 +137,11 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link"> Pricing </a>
+                    <a href="pricing.html" class="nav-link"> Pricing </a>
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link"> Ecosystem </a>
+                    <a href="ecosystem.html" class="nav-link"> Ecosystem </a>
                   </li>
 
                   <li class="nav-item">
@@ -221,10 +221,11 @@
               <div class="section-title">
                 <h2>Contact Us Today, Get In Touch With Expert</h2>
                 <p>
-                  This is version of Lorem Ipsum. Proin ida nibh vel velit
-                  auctor aliquet. Aenean tdin, lorem quis bibendum auctor, nisi
-                  elit conse thequat ipsum, nec sagtis sem nibh id elit. Duis
-                  sed odio sit amet nibh vulputate cursus a sit. amet.mauris.
+                  Whether you’re facing a legal challenge or seeking proactive
+                  legal advice, our team is here to support you. At Law Assist,
+                  we provide expert guidance tailored to your needs—fast,
+                  reliable, and professional. Let us help you make informed
+                  legal decisions with confidence.
                 </p>
               </div>
 
@@ -232,41 +233,23 @@
                 <div class="col-lg-6">
                   <div class="contact-card">
                     <span>Phone Number</span>
-                    <h3><a href="tel:+0123456987">+0123 456 987</a></h3>
+                    <h3><a href="tel:+918766270884">+91 8766270884</a></h3>
                   </div>
                 </div>
 
                 <div class="col-lg-6">
                   <div class="contact-card">
-                    <span>Our Social Link</span>
-                    <ul>
-                      <li>
-                        <a
-                          href="https://www.facebook.com/login/"
-                          target="_blank"
-                        >
-                          <i class="lab la-facebook-f"></i>
-                        </a>
-                      </li>
-                      <li>
-                        <a
-                          href="https://twitter.com/i/flow/login"
-                          target="_blank"
-                        >
-                          <i class="lab la-twitter"></i>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="https://www.instagram.com/" target="_blank">
-                          <i class="lab la-instagram"></i>
-                        </a>
-                      </li>
-                      <li>
-                        <a href="https://www.google.co.uk/" target="_blank">
-                          <i class="lab la-google-plus"></i>
-                        </a>
-                      </li>
-                    </ul>
+                    <span>Email</span>
+                    <h3>
+                      <a href="mailto:info@lawassist.com">info@lawassist.com</a>
+                    </h3>
+                  </div>
+                </div>
+
+                <div class="col-lg-12">
+                  <div class="contact-card">
+                    <span>Address</span>
+                    <h3>Two Horizon, Gurugram, 122002</h3>
                   </div>
                 </div>
               </div>
@@ -280,6 +263,13 @@
             </div>
             <div class="contact-form">
               <form id="contactForm">
+                <!-- Web3 Token -->
+                <input
+                  type="hidden"
+                  name="web3-token"
+                  value="af0b7193-e1ba-42f6-a435-db4fb28a9f4a"
+                />
+
                 <div class="row justify-content-center">
                   <div class="col-md-6">
                     <div class="form-group">
@@ -317,9 +307,9 @@
                     <div class="form-group">
                       <input
                         type="text"
-                        name="email"
+                        name="phone"
                         class="form-control"
-                        id="Phone"
+                        id="phone"
                         required
                         data-error="Please enter your phone"
                         placeholder="Phone No"
@@ -333,7 +323,7 @@
                     <div class="form-group">
                       <input
                         type="text"
-                        name="email"
+                        name="subject"
                         class="form-control"
                         id="subject"
                         required
@@ -373,11 +363,11 @@
                           id="gridCheck"
                           required
                         />
-
                         <label class="form-check-label" for="gridCheck">
                           Accept
                           <a href="terms-condition.html">Terms & Conditions</a>
-                          And <a href="privacy-policy.html">Privacy Policy.</a>
+                          And
+                          <a href="privacy-policy.html">Privacy Policy.</a>
                         </label>
                         <div
                           class="help-block with-errors gridCheck-error"
@@ -400,6 +390,7 @@
         </div>
       </div>
     </div>
+
     <!-- End Contact Area -->
 
     <!-- Footer Area-->
@@ -412,12 +403,13 @@
                 <img src="assets/img/logo-white.png" alt="logo" />
               </div>
               <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                blanditiis praesentium voluptatum deleniti atque corrupti quos
-                dolores et quas molestias excepturi sint occaecati cupiditate
-                non provident, similique sunt in culpa qui officia deserunt
-                mollitia animi, id est laborum et dolorum fuga. Et harum quidem
-                rerum.
+                At Law Assist, we are committed to delivering expert legal
+                solutions with integrity and precision. Our team takes pride in
+                offering personalized guidance to clients facing complex legal
+                challenges, ensuring transparency and professionalism every step
+                of the way. We believe in making justice accessible and strive
+                to ease the burden of legal procedures with clarity and
+                confidence.
               </p>
 
               <ul class="footer-socials">
@@ -469,22 +461,16 @@
                   </a>
                 </li>
                 <li>
-                  <a href="case-study.html">
+                  <a href="pricing.html">
                     <i class="las la-star"></i>
-                    Case Study
+                    Our Pricing
                   </a>
                 </li>
 
                 <li>
-                  <a href="testimonials.html">
+                  <a href="ecosystem.html">
                     <i class="las la-star"></i>
-                    Clients Review
-                  </a>
-                </li>
-                <li>
-                  <a href="attorney.html">
-                    <i class="las la-star"></i>
-                    Our Attorneys
+                    Our Ecosystem
                   </a>
                 </li>
               </ul>
@@ -497,45 +483,39 @@
 
               <ul class="footer-text">
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Civil Law
+                    Company Registration
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Family Law
+                    Trademark Registration
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Cyber Law
+                    MCA Compliance
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Education Law
+                    Legal Drafting
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Business Law
+                    Patent Filing
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Investment Law
-                  </a>
-                </li>
-                <li>
-                  <a href="service-details.html">
-                    <i class="las la-star"></i>
-                    Criminal Law
+                    MSME Registration
                   </a>
                 </li>
               </ul>
@@ -549,15 +529,15 @@
               <ul class="info-list">
                 <li>
                   <i class="las la-phone"></i>
-                  <a href="tel:+0123456987">+0123 456 987</a>
+                  <a href="tel:+918766270884">+91 8766270884</a>
                 </li>
                 <li>
                   <i class="las la-envelope"></i>
-                  <a href="mailto:atorn@info.com">atorn@info.com</a>
+                  <a href="mailto:info@lawassist.com">info@lawassist.com</a>
                 </li>
                 <li>
                   <i class="las la-map-marker-alt"></i>
-                  Silven House, 4 Lower Gilmor Bank Edinburgh EH3 9QP, UK
+                  Two Horizon, Gurugram, 122002
                 </li>
               </ul>
             </div>
@@ -571,18 +551,14 @@
     <div class="footer-bottom">
       <div class="container">
         <p>
-          Copyright @
-          <script>
-            document.write(new Date().getFullYear());
-          </script>
-          Atorn. All rights reserved<a
-            href="https://hibootstrap.com/"
-            target="_blank"
-            >HiBootstrap</a
+          © Copyright LawAssist. Designed by
+          <a href="https://aetherweb.life" target="_blank"
+            >Aetherweb Technologies LLP</a
           >
         </p>
       </div>
     </div>
+
     <!-- End Footer bottom Area -->
 
     <!-- Go Top -->
