--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/favicon.png" />
     <!-- Title -->
-    <title>Atorn - Law Firm & Attorney Website HTML Template</title>
+    <title>LawAssist - Law Firm</title>
   </head>
   <body>
     <!-- Preloder Area -->
@@ -51,13 +51,13 @@
                 <li>
                   <a href="mailto:hello@atorn.com">
                     <i class="las la-envelope"></i>
-                    hello@atorn.com
+                    info@lawassist.com
                   </a>
                 </li>
                 <li>
                   <a href="tel:+823-456-879">
                     <i class="las la-phone"></i>
-                    +0123 456 789
+                    +91 8766270884
                   </a>
                 </li>
               </ul>
@@ -143,7 +143,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link"> Ecosystem </a>
+                    <a href="ecosystem.html" class="nav-link"> Ecosystem </a>
                   </li>
 
                   <li class="nav-item">
@@ -214,93 +214,157 @@
     </div>
     <!-- End Page banner Area -->
 
-    <!-- Our Service Area -->
-    <div class="our-service-area pt-100 pb-70">
+    <!-- Service Area -->
+    <div class="service-area pt-100">
       <div class="container">
         <div class="section-title">
           <span>Our Services</span>
           <h2>
-            We Are Providing <span> Top Services</span> With Excellent
-            Performance
+            We Provide <span>Business Legal Solutions</span> With Proven Results
           </h2>
         </div>
 
         <div class="row justify-content-center">
           <div class="col-lg-4 col-sm-6">
-            <div class="our-service-card">
-              <i class="las la-city"></i>
-              <h3>Civil<span> Law</span></h3>
-              <p>
-                On the other hand, we denounce with righteous indignation and
-                dislike men who are so beguiled and demoralized by the charms of
-                pleasure of the moment, so blinded by desire.
-              </p>
+            <div class="service-card">
+              <a href="services.html">
+                <img
+                  src="assets/img/services/business law.png"
+                  alt="Company Registration"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Company+Registration'"
+                />
+              </a>
+              <div class="service-text">
+                <i class="las la-file-contract"></i>
+                <h3>
+                  <a href="services.html">Company <span>Registration</span></a>
+                </h3>
+                <p>
+                  Complete registration for Pvt Ltd, LLP, OPC & Partnerships.
+                  Includes DIN, DSC, PAN processing and incorporation
+                  certificate filing.
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-sm-6">
-            <div class="our-service-card">
-              <i class="las la-balance-scale"></i>
-              <h3>Investment<span> Law</span></h3>
-              <p>
-                On the other hand, we denounce with righteous indignation and
-                dislike men who are so beguiled and demoralized by the charms of
-                pleasure of the moment, so blinded by desire.
-              </p>
+            <div class="service-card">
+              <a href="services.html">
+                <img
+                  src="assets/img/business-img.jpg"
+                  alt="Trademark Registration"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Trademark+Registration'"
+                />
+              </a>
+              <div class="service-text">
+                <i class="las la-trademark"></i>
+                <h3>
+                  <a href="services.html"
+                    >Trademark <span>Registration</span></a
+                  >
+                </h3>
+                <p>
+                  Comprehensive brand protection including search, filing, and
+                  responding to examination reports for complete trademark
+                  security.
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-sm-6">
-            <div class="our-service-card">
-              <i class="las la-broadcast-tower"></i>
-              <h3>Cyber<span> Law</span></h3>
-              <p>
-                On the other hand, we denounce with righteous indignation and
-                dislike men who are so beguiled and demoralized by the charms of
-                pleasure of the moment, so blinded by desire.
-              </p>
+            <div class="service-card">
+              <a href="services.html">
+                <img
+                  src="./assets/img/services/mca-comp.jpg"
+                  alt="MCA Compliance"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Compliance'"
+                />
+              </a>
+              <div class="service-text">
+                <i class="las la-clipboard-check"></i>
+                <h3>
+                  <a href="services.html">MCA <span>Compliance</span></a>
+                </h3>
+                <p>
+                  Annual ROC filings, form submissions and statutory compliance
+                  to maintain good standing and avoid government penalties.
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-sm-6">
-            <div class="our-service-card">
-              <i class="las la-balance-scale-left"></i>
-              <h3>Education<span> Law</span></h3>
-              <p>
-                On the other hand, we denounce with righteous indignation and
-                dislike men who are so beguiled and demoralized by the charms of
-                pleasure of the moment, so blinded by desire.
-              </p>
+            <div class="service-card">
+              <a href="services.html">
+                <img
+                  src="./assets/img/services/legal-draft.jpg"
+                  alt="Legal Drafting"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Legal+Drafting'"
+                />
+              </a>
+              <div class="service-text">
+                <i class="las la-pen-fancy"></i>
+                <h3>
+                  <a href="services.html">Legal <span>Drafting</span></a>
+                </h3>
+                <p>
+                  Professionally drafted agreements, MoUs, NDAs and contracts
+                  tailored to your specific business operational requirements.
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-sm-6">
-            <div class="our-service-card">
-              <i class="las la-user-tie"></i>
-              <h3>Business<span> Law</span></h3>
-              <p>
-                On the other hand, we denounce with righteous indignation and
-                dislike men who are so beguiled and demoralized by the charms of
-                pleasure of the moment, so blinded by desire.
-              </p>
+            <div class="service-card">
+              <a href="services.html">
+                <img
+                  src="./assets/img/services/patent-file.jpg"
+                  alt="Patent Filing"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=Patent+Filing'"
+                />
+              </a>
+              <div class="service-text">
+                <i class="las la-lightbulb"></i>
+                <h3>
+                  <a href="services.html">Patent <span>Filing</span></a>
+                </h3>
+                <p>
+                  Complete patent application services including provisional
+                  filing, complete specifications, and expert advisory on
+                  documentation.
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-sm-6">
-            <div class="our-service-card">
-              <i class="las la-users"></i>
-              <h3>Family<span> Law</span></h3>
-              <p>
-                On the other hand, we denounce with righteous indignation and
-                dislike men who are so beguiled and demoralized by the charms of
-                pleasure of the moment, so blinded by desire.
-              </p>
+            <div class="service-card">
+              <a href="services.html">
+                <img
+                  src="./assets/img/services/msme-res.png"
+                  alt="MSME Registration"
+                  onerror="this.src='https://placehold.co/600x400/003366/white?text=MSME+Registration'"
+                />
+              </a>
+              <div class="service-text">
+                <i class="las la-certificate"></i>
+                <h3>
+                  <a href="services.html">MSME <span>Registration</span></a>
+                </h3>
+                <p>
+                  Quick registration for Micro, Small & Medium Enterprises to
+                  avail government subsidies, credit benefits and incentives.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- End Our Service Area -->
+    <!-- End Service Area -->
 
     <!-- Footer Area-->
     <footer class="footer-area pt-100 pb-70">
@@ -312,12 +376,13 @@
                 <img src="assets/img/logo-white.png" alt="logo" />
               </div>
               <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                blanditiis praesentium voluptatum deleniti atque corrupti quos
-                dolores et quas molestias excepturi sint occaecati cupiditate
-                non provident, similique sunt in culpa qui officia deserunt
-                mollitia animi, id est laborum et dolorum fuga. Et harum quidem
-                rerum.
+                At Law Assist, we are committed to delivering expert legal
+                solutions with integrity and precision. Our team takes pride in
+                offering personalized guidance to clients facing complex legal
+                challenges, ensuring transparency and professionalism every step
+                of the way. We believe in making justice accessible and strive
+                to ease the burden of legal procedures with clarity and
+                confidence.
               </p>
 
               <ul class="footer-socials">
@@ -369,22 +434,16 @@
                   </a>
                 </li>
                 <li>
-                  <a href="case-study.html">
+                  <a href="pricing.html">
                     <i class="las la-star"></i>
-                    Case Study
+                    Our Pricing
                   </a>
                 </li>
 
                 <li>
-                  <a href="testimonials.html">
+                  <a href="ecosystem.html">
                     <i class="las la-star"></i>
-                    Clients Review
-                  </a>
-                </li>
-                <li>
-                  <a href="attorney.html">
-                    <i class="las la-star"></i>
-                    Our Attorneys
+                    Our Ecosystem
                   </a>
                 </li>
               </ul>
@@ -397,45 +456,39 @@
 
               <ul class="footer-text">
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Civil Law
+                    Company Registration
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Family Law
+                    Trademark Registration
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Cyber Law
+                    MCA Compliance
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Education Law
+                    Legal Drafting
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Business Law
+                    Patent Filing
                   </a>
                 </li>
                 <li>
-                  <a href="service-details.html">
+                  <a href="services.html">
                     <i class="las la-star"></i>
-                    Investment Law
-                  </a>
-                </li>
-                <li>
-                  <a href="service-details.html">
-                    <i class="las la-star"></i>
-                    Criminal Law
+                    MSME Registration
                   </a>
                 </li>
               </ul>
@@ -449,15 +502,15 @@
               <ul class="info-list">
                 <li>
                   <i class="las la-phone"></i>
-                  <a href="tel:+0123456987">+0123 456 987</a>
+                  <a href="tel:+918766270884">+91 8766270884</a>
                 </li>
                 <li>
                   <i class="las la-envelope"></i>
-                  <a href="mailto:atorn@info.com">atorn@info.com</a>
+                  <a href="mailto:info@lawassist.com">info@lawassist.com</a>
                 </li>
                 <li>
                   <i class="las la-map-marker-alt"></i>
-                  Silven House, 4 Lower Gilmor Bank Edinburgh EH3 9QP, UK
+                  Two Horizon, Gurugram, 122002
                 </li>
               </ul>
             </div>
@@ -471,11 +524,14 @@
     <div class="footer-bottom">
       <div class="container">
         <p>
-          © Atorn is Proudly Owned by
-          <a href="https://hibootstrap.com/" target="_blank">HiBootstrp</a>
+          © Copyright LawAssist. Designed by
+          <a href="https://aetherweb.life" target="_blank"
+            >Aetherweb Technologies LLP</a
+          >
         </p>
       </div>
     </div>
+
     <!-- End Footer bottom Area -->
 
     <!-- Go Top -->
